<resources>
    <string name="app_name">아재력 측정기</string>
    <string name="ajae_power_test_with_line_change">아재력\n테스트</string>
    <string name="you_are_already_laughing">넌 이미 웃고 있다 ㅋㅋ</string>
    <string name="test_your_ajae_power">당신의 아재력을\n테스트하세요</string>
    <string name="start">시작하기</string>
    <string name="test_again">다시하기</string>
    <string name="share">공유하기</string>
    <string name="share_ajae_power">아재력 알리기</string>
    <string name="upload_complete">업로드 완료</string>
    <string name="share_ajae_gag">아재개그 퍼뜨리기</string>
    <string name="score">%1$d 점</string>
    <string name="none_ajae_message">아직까진\n젊은오빠</string>
    <string name="rare_ajae_message">자라나는\n어린새싹</string>
    <string name="medium_ajae_message">아재력이\n물씬물씬</string>
    <string name="well_done_ajae_message">잘익었다\n농축아재</string>
    <string name="burnt_ajae_message">빼박캔트\n진성아재</string>
    <string name="none_taunt">아직까지는 잘 버티는군</string>
    <string name="rare_taunt">점점 빠져든다..</string>
    <string name="medium_taunt">호오..\n아재력이 올라가는군요?</string>
    <string name="well_taunt">당신은 이미\n아재개그의 포로</string>
    <string name="burnt_taunt">아재 포텐 터짐!!</string>
    <string name="result_with_exclamation">결과!</string>
    <string name="x_percentage" formatted="false">%1$d %%</string>
    <string name="your_ajae_power">당신의 아재력</string>
    <string name="storage_permission_needed">권한을 부여하지 않으면 아재력을 퍼뜨릴 수 없어요 ㅠㅠ</string>
    <string name="camera_permission_needed">카메라 권한이 없으면 아재력을 측정할 수 없어요 ㅠㅠ</string>
    <string name="to_home">집으로</string>
    <string name="first">첫번째</string>
    <string name="next">다음</string>
    <string name="previous">이전</string>
    <string name="result">결과</string>
    <string name="server_url">https://sunhoY.github.io/zealot-react/</string>
    <string name="admin_pass_code">435261</string>
    <string name="confirm">확인</string>
    <string name="admin_introduction">관리자 전용 페이지입니다.\n관리자가 아니면 사용할 수 없습니다\n인증번호를 입력해주세요</string>
    <string name="go">GO</string>
    <string name="throw_away">버려</string>
    <string name="gaining_ajae_power">아재력을 모으고 있습니다.</string>
    <string name="enter_your_nick_name">닉네임을 입력해주세요.</string>
    <string name="cancel">취소</string>
    <string name="google_api_backend">https://www.googleapis.com/</string>
    <string name="packing_your_ajae_power">%1$s 님의 아재력을 포장하고 있습니다.</string>
    <string name="pager_tutorial_message">이미지를 <font color="#e85d59">좌우로 넘기면</font>\n요절복통 아재개그를\n더 즐기실 수 있습니다.</string>
    <string name="camera_tutorial_message">정확한 아재력 측정을 위해\n<font color="#e85d59">카메라 정면</font>에 얼굴을 위치시키세요</string>
    <string name="smile_tutorial_message">아재개그를 보고 웃으면\n<font color="#e85d59">아재력 게이지</font>가 상승합니다.\n\n한번 웃어보세요.</string>
    <string name="navigation_tutorial_message">다음 아재개그를 보는 것은\n<font color="#e85d59">상단의 버튼</font>으로도 할 수 있습니다.</string>
    <string name="zero_percent">0 %%</string>
</resources>
