<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:orientation="horizontal"
    android:padding="5dp"
    tools:ignore="MissingPrefix">

    <TextView
        android:id="@+id/previous"
        fontPath="fonts/BMDOHYEON.ttf"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:text="@string/to_home"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/current"
        fontPath="fonts/BMDOHYEON.ttf"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:text="@string/first"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/next"
        fontPath="fonts/BMDOHYEON.ttf"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:text="@string/next"
        android:textSize="20sp" />
</RelativeLayout>