<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingPrefix"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <io.harry.zealot.view.AjaeImageView
        android:id="@+id/ajae_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ajae_image_selector"
        android:layout_centerInParent="true"
        android:layout_marginBottom="14dp" />


    <io.harry.zealot.view.AjaePercentageView
        fontPath="fonts/BMDOHYEON.ttf"
        android:id="@+id/ajae_percentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:layout_above="@id/ajae_image"
        tools:text="94"
        android:textSize="48sp"
        android:textColor="@color/ajae_indicator_selector"
        android:shadowColor="#ffffff"
        android:shadowDx="1.0"
        android:shadowDy="1.0"
        android:shadowRadius="1.0"
        />

    <TextView
        fontPath="fonts/BMDOHYEON.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_with_exclamation"
        android:textColor="#ffffff"
        android:textSize="48sp"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/ajae_percentage"
        android:layout_marginBottom="20dp"
        />

    <Button
        fontPath="fonts/BMDOHYEON.ttf"
        android:id="@+id/share_sns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:drawableTop="@drawable/ico_share"
        android:text="@string/share"
        />

    <io.harry.zealot.view.AjaeMessageView
        android:id="@+id/ajae_message"
        fontPath="fonts/BMDOHYEON.ttf"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        tools:text="빼박캔트\n진성아재"
        android:layout_below="@id/ajae_image"
        android:layout_marginTop="20dp"
        android:textSize="48sp"
        android:textColor="#ffffff"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        android:maxLines="0"
        android:gravity="center_horizontal"
        />

    <Button
        fontPath="fonts/BMDOHYEON.ttf"
        style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/test_again"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/test_again"
        android:textSize="20sp"
        android:textColor="@color/blue"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/ajae_message"
        android:layout_marginTop="20dp"
        />

</RelativeLayout>